fixed modal-window on tablet and pc

--- a/css/main.css
+++ b/css/main.css
@@ -272,6 +272,7 @@ body {
 }
 @media screen and (min-width: 768px) {
   .page-header__content {
+    z-index: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
