--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -84,6 +84,7 @@
   }
 
   @media screen and (min-width: 768px) {
+    z-index: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
